Bug 229947 - webgl/2.0.y/deqp/functional/gles3/negativestateapi.html get_framebuffer_attachment_parameter fails on Metal
Summary: webgl/2.0.y/deqp/functional/gles3/negativestateapi.html get_framebuffer_attac...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks: webgl2conformance 229982
  Show dependency treegraph
 
Reported: 2021-09-06 02:21 PDT by Kimmo Kinnunen
Modified: 2021-09-07 13:56 PDT (History)
10 users (show)

See Also:


Attachments
Patch (3.96 KB, patch)
2021-09-07 00:39 PDT, Kimmo Kinnunen
no flags Details | Formatted Diff | Diff
Patch (8.62 KB, patch)
2021-09-07 04:16 PDT, Kimmo Kinnunen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2021-09-06 02:21:28 PDT
This test runs the WebGL Test listed below in an iframe and reports PASS or FAIL.

Test: ../../../../resources/webgl_test_files/deqp/functional/gles3/negativestateapi.html?webglVersion=2

[ 1: PASS ] state.enable: Passed
[ 2: PASS ] state.disable: Passed
[ 3: PASS ] state.get_parameter: Passed
[ 4: PASS ] state.get_indexed_parameter: Passed
[ 5: PASS ] state.get_attached_shaders: Passed
[ 6: PASS ] state.get_shader_parameter: Passed
[ 7: PASS ] state.get_shader_info_log: Passed
[ 8: PASS ] state.get_shader_precision_format: Passed
[ 9: PASS ] state.get_shader_source: Passed
[ 10: PASS ] state.get_program_parameter: Passed
[ 11: PASS ] state.get_program_info_log: Passed
[ 12: PASS ] state.get_tex_parameter: Passed
[ 13: PASS ] state.get_uniform: Passed
[ 14: PASS ] state.get_active_uniform: Passed
[ 15: PASS ] state.get_active_uniforms: Passed
[ 16: PASS ] state.get_active_uniform_block_parameter: Passed
[ 17: PASS ] state.get_active_uniform_block_name: Passed
[ 18: PASS ] state.get_active_attrib: Passed
[ 19: PASS ] state.get_uniform_indices: Passed
[ 20: PASS ] state.get_vertex_attrib: Passed
[ 21: PASS ] state.get_vertex_attrib_offset: Passed
[ 22: PASS ] state.get_frag_data_location: Passed
[ 23: PASS ] state.get_buffer_parameter: Passed
[ 24: FAIL ] state.get_framebuffer_attachment_parameter: Expected gl.INVALID_ENUM, but got gl.NO_ERROR.
[ 25: PASS ] state.get_renderbuffer_parameter: Passed
[ 26: PASS ] state.get_internalformat_parameter: Passed
[ 27: PASS ] state.get_query: Passed
[ 28: FAIL ] state.get_query_parameter: Expected gl.INVALID_OPERATION, but got gl.NO_ERROR.
[ 29: PASS ] state.get_sync_parameter: Passed
[ 30: PASS ] state.is_enabled: Passed
[ 31: PASS ] state.is_buffer: Passed
[ 32: PASS ] state.is_framebuffer: Passed
[ 33: PASS ] state.is_program: Passed
[ 34: PASS ] state.is_renderbuffer: Passed
[ 35: PASS ] state.is_shader: Passed
[ 36: PASS ] state.is_texture: Passed
[ 37: PASS ] state.is_query: Passed
[ 38: PASS ] state.is_sampler: Passed
[ 39: PASS ] state.is_sync: Passed
[ 40: PASS ] state.is_transform_feedback: Passed
[ 41: PASS ] state.is_vertex_array: Passed
[ 42: PASS ] state.is_vertex_array: successfullyParsed is true
[ FAIL ] 2 failures reported
Comment 1 Kimmo Kinnunen 2021-09-07 00:39:05 PDT
Created attachment 437460 [details]
Patch
Comment 2 Kimmo Kinnunen 2021-09-07 04:16:17 PDT
Created attachment 437485 [details]
Patch
Comment 3 Kenneth Russell 2021-09-07 08:56:47 PDT
Comment on attachment 437485 [details]
Patch

Looks good. Will you file a follow-on bug about the remaining failures? Would be happy to help with those. r+
Comment 4 Kimmo Kinnunen 2021-09-07 10:31:29 PDT
(In reply to Kenneth Russell from comment #3)
> Looks good. Will you file a follow-on bug about the remaining failures?
> Would be happy to help with those. r+
Thank you!
The follow on is already listed in the blocking bugs
Comment 5 EWS 2021-09-07 11:04:00 PDT
Committed r282097 (241396@main): <https://commits.webkit.org/241396@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 437485 [details].
Comment 6 Radar WebKit Bug Importer 2021-09-07 11:04:30 PDT
<rdar://problem/82830342>
Comment 7 Kenneth Russell 2021-09-07 13:56:52 PDT
(In reply to Kimmo Kinnunen from comment #4)
> The follow on is already listed in the blocking bugs

Ah, I see now. Thanks!