webgl/2.0.y/deqp/functional/gles3/negativestateapi.html get_framebuffer_attachment_parameter fails on Metal https://bugs.webkit.org/show_bug.cgi?id=229947

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-09-07
Reviewed by Kenneth Russell.

Source/WebCore:

Fix get_framebuffer_attachment_parameter part of
webgl/2.0.y/deqp/functional/gles3/negativestateapi.html.
The code was querying the attachment parameters of default framebuffer from ANGLE.
However, this is problematic as WebGL default framebuffer is emulated with
a FBO with texture and stencil attachment. As such, some properties returned
values that should have returned errors.
WebGL2 specification specifies all the properties that can be queried.
All these properties are known at the WebCore level, so just return them
there.
Failing test part was:
    gl.bindFramebuffer(gl.FRAMEBUFFER, null);
    gl.getFramebufferAttachmentParameter(gl.FRAMEBUFFER, gl.BACK, gl.FRAMEBUFFER_ATTACHMENT_OBJECT_NAME);
    this.expectError(gl.INVALID_ENUM);
and:
    gl.bindFramebuffer(gl.FRAMEBUFFER, null);
    gl.getFramebufferAttachmentParameter(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.FRAMEBUFFER_ATTACHMENT_OBJECT_NAME);
    this.expectError([gl.INVALID_OPERATION, gl.INVALID_ENUM]);

Tested by:
webgl/2.0.y/deqp/functional/gles3/negativestateapi.html

Does modify test expectations since the test fails in other, unrelated parts.

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::getFramebufferAttachmentParameter):

LayoutTests:

The fix fixed the test partially. This would affect the test results.
WebGL tests do not commonly have partially succeeding test results, rather
the -expected.txt is always the "success".

webgl/2.0.0/deqp/functional/gles3/negativestateapi.html had its result generated with
buggy implementation, e.g. the result had failures listed. Regenerate the result and
add expected failure to test expectations instead.

* webgl/2.0.0/deqp/functional/gles3/negativestateapi-expected.txt:
Reset the expected.txt to test success instead of incorrect failure.
* webgl/TestExpectations:
Mark the test failing.

Canonical link: https://commits.webkit.org/241396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282097 268f45cc-cd09-0410-ab3c-d52691b4dbfc